Fix spacing between hero and main section and styling of main section title

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,13 @@
 /* ------------------------------------------------------------------------- */
 /* Left column                                                               */
 /* ------------------------------------------------------------------------- */
+.section-title {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500;
+    font-size: 2.5em;
+    color: #5777ba;
+}
+
 .left-column .card-title {
     font-family: 'Raleway', sans-serif;
     font-weight: 500;
